Bug 207136 - [patch incl] Broken icons for Special Application/Window Settings menu
Summary: [patch incl] Broken icons for Special Application/Window Settings menu
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Unspecified
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-09-12 01:39 UTC by markuss
Modified: 2009-09-13 22:25 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
fix (763 bytes, patch)
2009-09-12 01:40 UTC, markuss
Details

Note You need to log in before you can comment on or make changes to this bug.
Description markuss 2009-09-12 01:39:09 UTC
Version:            (using KDE 4.3.1)

There are broken icons for Special Application/Window Settings menu (right-click on window title).
I've written a small patch to correct the file names. The patch is for trunk, but should be applied to 4.3 branch as well.
Comment 1 markuss 2009-09-12 01:40:17 UTC
Created attachment 36883 [details]
fix

Added here, because http://reviewboard.kde.org has no KWin group.... :-(
Comment 2 Martin Flöser 2009-09-12 09:41:52 UTC
It might sound stupid: which file has to be patched (it's missing in the diff).
Comment 3 markuss 2009-09-12 12:15:20 UTC
kdebase/workspace/kwin/useractions.cpp

That wouldn't be a problem, if the KWin/kdebase team also participated in http://reviewboard.kde.org (not only kdelibs, Kopete, kdepim,...)
Comment 4 markuss 2009-09-12 12:41:05 UTC
I applied for an SVN account, btw. Hopefully I can commit that patch myself in a few days.
Comment 5 Robin Burchell 2009-09-12 12:44:47 UTC
I do have this issue, the icons are broken - however, this patch did not fix this for me, the icons are still not working on latest trunk with it applied.
Comment 6 markuss 2009-09-12 12:55:38 UTC
That can't be right. Did you apply it to useractions.cpp?
Every somewhat recent KDE release ships with preferences-system-windows-actions.png
Either you use something else than Oxygen as icon theme or for whatever reason your distro doesn't put the icon files into
/usr/share/icons/oxygen/*/apps/
Comment 7 Robin Burchell 2009-09-12 13:01:24 UTC
w00t@lucid:~$ locate preferences-system-window-actions.png
w00t@lucid:~$

I do use Oxygen, however I don't use a distro, I self-build from trunk.
Comment 8 Christoph Feck 2009-09-12 14:00:26 UTC
preferences-system-window<b>s</b>-actions.png
Comment 9 markuss 2009-09-13 22:19:26 UTC
SVN commit 1023070 by markuss:

BUG: 207136

 M  +2 -2      useractions.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1023070
Comment 10 markuss 2009-09-13 22:25:45 UTC
SVN commit 1023072 by markuss:

BUG: 207136

 M  +2 -2      useractions.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1023072