BUG: 207136

svn path=/trunk/KDE/kdebase/workspace/; revision=1023070